--- a/demo.html
+++ b/demo.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
-	<title>Summit Board</title>
+	<title>Silverwoods Board</title>
 	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="stylesheet" href="boardssummit.css" />
+	<link rel="stylesheet" href="../assets/boards.css" />
 	<link href="https://fonts.googleapis.com/css?family=Khula:800" rel="stylesheet">
+
 	<style>
 		body {
 			background-color: black;
@@ -14,474 +15,442 @@
 		/*Positioning*/
 		/*Vance*/
 		.aberdeenskiway {
-			top: 16px;
-			left: 104px;
-			position: absolute;
-		}
-
-		.easystreet {
-			top: 33px;
-			left: 104px;
-			position: absolute;
-		}
-
-		.creekside {
-			top: 64px;
-			left: 104px;
-			position: absolute;
-		}
-
-		.silverqueen {
-			top: 48px;
-			left: 104px;
-			position: absolute;
-		}
-
-		.farout {
-			top: 80px;
-			left: 104px;
+			top: 21px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.comettrail {
-			top: 96px;
-			left: 104px;
+			top: 73px;
+			left: 8px;
+			position: absolute;
+		}
+
+		.easystreet {
+			top: 31px;
+			left: 8px;
+			position: absolute;
+		}
+
+		.farout {
+			top: 63px;
+			left: 8px;
+			position: absolute;
+		}
+
+		.silverqueen {
+			top: 42px;
+			left: 8px;
+			position: absolute;
+		}
+
+		.creekside {
+			top: 52px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.overthehill {
-			top: 111px;
-			left: 104px;
+			top: 84px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.fis {
-			top: 127px;
-			left: 104px;
+			top: 95px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.xmasbowl {
-			top: 16px;
-			left: 136px;
+			top: 21px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.waltsrun {
-			top: 33px;
-			left: 136px;
+			top: 31px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.constellation {
-			top: 48px;
-			left: 136px;
+			top: 42px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.exhibition {
-			top: 64px;
-			left: 136px;
+			top: 52px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.whiskeyjack {
-			top: 96px;
-			left: 136px;
+			top: 73px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.middledipper {
-			top: 111px;
-			left: 136px;
+			top: 84px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.milkyway {
-			top: 127px;
-			left: 136px;
+			top: 95px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.skunkhollow {
-			top: 16px;
-			left: 169px;
+			top: 21px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.chaletalley {
-			top: 33px;
-			left: 169px;
+			top: 31px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.sundance {
-			top: 48px;
-			left: 169px;
-			position: absolute;
-		}
-
-		.littledipper {
-			top: 64px;
-			left: 169px;
+			top: 42px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.bigdipperupper {
-			top: 80px;
-			left: 169px;
+			top: 63px;
+			left: 72px;
+			position: absolute;
+		}
+
+		.littledipper {
+			top: 52px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.blastoff {
-			top: 96px;
-			left: 169px;
+			top: 74px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.hotdog {
-			top: 111px;
-			left: 169px;
+			top: 84px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.face {
-			top: 127px;
-			left: 169px;
+			top: 95px;
+			left: 72px;
 			position: absolute;
 		}
 
 		/*Powder Gulch*/
 		.auntgladys {
-			top: 33px;
-			left: 8px;
+			top: 31px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.bergerstrasse {
-			top: 49px;
-			left: 8px;
+			top: 41px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.lastchance {
-			top: 65px;
-			left: 8px;
+			top: 52px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.twentyfivenorth {
-			top: 81px;
-			left: 8px;
+			top: 63px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.justdandy {
-			top: 96px;
-			left: 8px;
+			top: 73px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.sunnyridge {
-			top: 112px;
-			left: 8px;
+			top: 84px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.buckedoff {
-			top: 128px;
-			left: 8px;
+			top: 94px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.sunnyhigh {
-			top: 144px;
-			left: 8px;
+			top: 105px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.robsonstreet {
-			top: 160px;
-			left: 8px;
+			top: 116px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.fearngully {
-			top: 33px;
-			left: 40px;
+			top: 31px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.eldorado {
-			top: 49px;
-			left: 40px;
+			top: 41px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.weewillie {
-			top: 65px;
-			left: 40px;
+			top: 52px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.gypsyqueen {
-			top: 81px;
-			left: 40px;
+			top: 63px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.campbellsloop {
-			top: 96px;
-			left: 40px;
+			top: 73px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.caliperridge {
-			top: 112px;
-			left: 40px;
+			top: 84px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.larch {
-			top: 128px;
-			left: 40px;
+			top: 94px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.juddsrun {
-			top: 144px;
-			left: 40px;
+			top: 105px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.blackpine {
-			top: 160px;
-			left: 40px;
+			top: 116px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.holysmokes {
-			top: 18px;
-			left: 72px;
+			top: 20px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.minerva {
-			top: 33px;
-			left: 72px;
+			top: 31px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.nirvana {
-			top: 49px;
-			left: 72px;
+			top: 41px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.zypper {
-			top: 65px;
-			left: 72px;
+			top: 52px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.bondiablo {
-			top: 81px;
-			left: 72px;
+			top: 62px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.heresjoe {
-			top: 96px;
-			left: 72px;
+			top: 73px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.normania {
-			top: 112px;
-			left: 72px;
+			top: 83px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.blackbear {
-			top: 128px;
-			left: 72px;
+			top: 94px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.whiteelephant {
-			top: 144px;
-			left: 72px;
+			top: 105px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.robilliardsrush {
-			top: 160px;
-			left: 72px;
+			top: 116px;
+			left: 168px;
 			position: absolute;
 		}
 
 		/*Silver Woods*/
 		.rollercoaster {
-			top: 80px;
-			left: 136px;
+			top: 63px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.starstruck {
-			top: 163px;
-			left: 169px;
+			top: 118px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.mineshaft {
-			top: 178px;
-			left: 169px;
+			top: 128px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.chaos {
-			top: 194px;
-			left: 169px;
+			top: 139px;
+			left: 72px;
 			position: absolute;
 		}
 
 		.silverfox {
-			top: 162px;
-			left: 104px;
+			top: 118px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.shootingstar {
-			top: 178px;
-			left: 104px;
+			top: 128px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.simplepleasure {
-			top: 194px;
-			left: 104px;
+			top: 139px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.cloud9 {
-			top: 209px;
-			left: 104px;
+			top: 150px;
+			left: 8px;
 			position: absolute;
 		}
 
 		.runningonempty {
-			top: 163px;
-			left: 136px;
+			top: 118px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.bxexpress {
-			top: 178px;
-			left: 136px;
+			top: 128px;
+			left: 40px;
 			position: absolute;
 		}
 
 		.northstar {
-			top: 194px;
-			left: 136px;
+			top: 139px;
+			left: 40px;
 			position: absolute;
 		}
 
 		/*Alpine Meadows*/
 		.crisscross {
-			top: 195px;
-			left: 8px;
+			top: 139px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.solitude {
-			top: 211px;
-			left: 8px;
+			top: 150px;
+			left: 105px;
 			position: absolute;
 		}
 
 		.ridgerun {
-			top: 195px;
-			left: 40px;
+			top: 139px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.lonestar {
-			top: 211px;
-			left: 40px;
+			top: 150px;
+			left: 137px;
 			position: absolute;
 		}
 
 		.splitdecision {
-			top: 195px;
-			left: 72px;
+			top: 139px;
+			left: 168px;
 			position: absolute;
 		}
 
 		.drsexpress {
-			top: 211px;
-			left: 72px;
+			top: 149px;
+			left: 168px;
 			position: absolute;
 		}
 
 		/*Home Run Tee*/
 		.homeruntee {
-			top: 18px;
-			left: 8px;
+			top: 20px;
+			left: 105px;
 			position: absolute;
 		}
 
 		/*Powder Gulch Express*/
 		.powdergulchexpress {
-			top: 18px;
-			left: 40px;
+			top: 20px;
+			left: 137px;
 			position: absolute;
 		}
 	</style>
-	<meta charset="UTF-8">
-	<title>XMLHttpRequest and onload handler with asynchronous requests</title>
-	<script>
-		function load(url, callback) {
-			var req = new XMLHttpRequest();
-			req.open('GET', url);
-			// to allow us doing XSLT in IE
-			try { req.responseType = "msxml-document" } catch (ex) { }
-			req.onload = function () {
-				callback(req.responseXML);
-			};
-			req.send();
-		}
 
-		function transform(xml, xsl) {
-			load(
-				xml,
-				function (inputXml) {
-					load(
-						xsl,
-						function (xsltSheet) {
-							displayResult(inputXml, xsltSheet);
-						}
-					);
-				}
-			);
-		}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
+		integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
+		crossorigin="anonymous" referrerpolicy="no-referrer">
+		</script>
 
-		function displayResult(xmlInput, xsltSheet) {
-			if (typeof XSLTProcessor !== 'undefined') {
-				var proc = new XSLTProcessor();
-				proc.importStylesheet(xsltSheet);
-				document.getElementById('boards').appendChild(proc.transformToFragment(xmlInput, document));
-			}
-			else if (typeof xmlInput.transformNode !== 'undefined') {
-				document.getElementById("boards").innerHTML = xmlInput.transformNode(xsltSheet);
-				console.log(xmlInput.transformNode(xsltSheet));
-			}
+	<script src="./js/lookup.js"></script>
+	<script src="./js/init.js"></script>
 
-		}
-	</script>
 </head>
 
-<body onload="transform('https://status.skisilverstar.com/1756.xml', 'summitboard.xsl')">
+<body>
 	<div id="boards"></div>
 </body>
 
