update css link path

--- a/demo.html
+++ b/demo.html
@@ -3,8 +3,7 @@
 
 <head>
 	<title>Silverwoods Board</title>
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="stylesheet" href="../assets/boards.css" />
+	<link rel="stylesheet" href="./assets/boards.css" />
 	<link href="https://fonts.googleapis.com/css?family=Khula:800" rel="stylesheet">
 
 	<style>
